--- a/urban-tribes-classification.ipynb
+++ b/urban-tribes-classification.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Urban Tribes Classification"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Data Preparation"
    ]
@@ -18,7 +24,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -63,17 +71,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1 µs, sys: 0 ns, total: 1 µs\n",
-      "Wall time: 4.05 µs\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -86,12 +88,14 @@
      "output_type": "stream",
      "text": [
       "(1158, 224, 224, 3)\n",
-      "(1158, 11)\n"
+      "(1158, 11)\n",
+      "CPU times: user 26 s, sys: 2.93 s, total: 29 s\n",
+      "Wall time: 47.4 s\n"
      ]
     }
    ],
    "source": [
-    "%time\n",
+    "%%time\n",
     "from keras.preprocessing.image import img_to_array, load_img\n",
     "from keras.utils.np_utils import to_categorical\n",
     "import numpy as np\n",
@@ -129,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
