--- a/examples/urban-tribes.ipynb
+++ b/examples/urban-tribes.ipynb
@@ -189,7 +189,7 @@
     "model.compile(optimizer='adadelta', loss='categorical_crossentropy',\n",
     "              metrics=['accuracy'])\n",
     "history = model.fit(x_train, y_train, batch_size=8, nb_epoch=5,\n",
-    "                    validation_data=(x_val, y_val))"
+    "                    validation_data=(x_val, y_val),shuffle=True)"
    ]
   },
   {
@@ -429,8 +429,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -444,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
